perf(v3.1): add persistent fuzzy dictionary